[project]
name = "twitter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "FurryR", email = "awathefox@gmail.com"},
]
dependencies = ["twitter-cli>=0.8.5", "aiohttp>=3.13.5"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
